# fastapi-ecommerce-backend

./: .env.example  .gitignore  Taskfile.yml  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4b74998038c1_added_email_verified_to_user.py  a24c4f3ffc5a_added_user.py  b6487ee909c3_add_social_authentication_with_user_.py  f23983b2608c_added_vendor_and_user_roles_and_updated_.py
api/: __init__.py
api/v1/: __init__.py
api/v1/auth/: __init__.py  auth_route.py
api/v1/email/: __init__.py  email_route.py
api/v1/oauth/: __init__.py  oauth_route.py
api/v1/password/: __init__.py  password_route.py
api/v1/token/: __init__.py  token_route.py
api/v1/user/: __init__.py  user_route.py
app/controllers/: auth_controller.py  user_controller.py
app/integrations/: __init__.py  jwt_token_store.py  otp.py  social_auth.py
app/integrations/cache/: __init__.py  key_builder.py  keys.py  user_cache.py
app/integrations/email/: client.py  service.py  templates.py
app/integrations/metrics/: prometheus.py
app/integrations/redis/: cache.py  client.py  jwt.py
app/models/: __init__.py  user.py  user_provider.py  user_roles.py  vendor.py
app/repositories/: __init__.py  user_provider_repository.py  user_repository.py  vendor_repository.py
app/schemas/extras/: current_user.py  token.py
app/schemas/request/: auth_request.py
app/schemas/response/: auth_response.py  user_response.py
core/: limiter.py  loggin.py  server.py  settings.py
core/controller/: base.py
core/database/: __init__.py  database.py
core/database/mixins/: primary_key_mixin.py  timestamp_mixin.py
core/dependencies/: __init__.py  authentication.py  get_user.py
core/exceptions/: __init__.py  base.py
core/factory/: base.py
core/middlewares/: __init__.py  cors.py  logging.py
core/redis/: __init__.py  redis_client.py
core/repository/: base.py
core/security/: __init__.py  jwt.py  token_manager.py
monitoring/prometheus/: prometheus.yml
