[project]
name = "fastapi-ecommerce-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[all]>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.13",
]
